--- a/torcs/torcs/data/tracks/dirt-3/Makefile
+++ b/torcs/torcs/data/tracks/dirt-3/Makefile
@@ -18,7 +18,7 @@
 
 DATADIR   = tracks/dirt/dirt-3
 
-DATA      = dirt-3.xml background.png background2.png dirt-3.ac dirt-3.png
+DATA      = dirt-3.xml background.png background2.png dirt-3.ac dirt-3.png readme.txt
 
 data-tracks-dirt_PKGFILES	= $(DATA)
 
