--- a/torcs/torcs/data/tracks/e-track-2/Makefile
+++ b/torcs/torcs/data/tracks/e-track-2/Makefile
@@ -18,13 +18,9 @@
 
 DATADIR    = tracks/road/e-track-2
 
-DATA_rel   = e-track-2.xml e-track-2.acc background.png e-track-2.png env.png pylon3.rgb
+DATA   = e-track-2.xml e-track-2.acc background.png e-track-2.png env.png pylon3.rgb readme.txt
 
-DATA_devel = e-track-2.ac e-track-2-relief.ac elevation-map.png object-map1.png object-map2.png
-
-DATA       = $(DATA_rel)
-
-data-tracks-road_PKGFILES	= $(DATA_rel)
+data-tracks-road_PKGFILES	= $(DATA)
 
 data-tracks-road_PKGDIR	= $(DATADIR)
 
