--- a/torcs/torcs/data/tracks/road/g-track-3/Makefile
+++ b/torcs/torcs/data/tracks/road/g-track-3/Makefile
@@ -18,7 +18,7 @@
 
 DATADIR   = tracks/road/g-track-3
 
-DATA      = g-track-3.xml g-track-3.acc $(shell find * -maxdepth 0 -type f -name '*.png') $(shell find * -maxdepth 0 -type f -name '*.rgb')
+DATA      = g-track-3.xml g-track-3.acc $(shell find * -maxdepth 0 -type f -name '*.png') $(shell find * -maxdepth 0 -type f -name '*.rgb') readme.txt
 
 data-tracks-road_PKGFILES	= $(DATA)
 
