--- a/torcs/torcs/data/tracks/dirt-1/Makefile
+++ b/torcs/torcs/data/tracks/dirt-1/Makefile
@@ -17,7 +17,7 @@
 
 DATADIR   = tracks/dirt/dirt-1
 
-DATA      = dirt-1.xml background.png dirt-1.ac dirt-1.png
+DATA      = dirt-1.xml background.png dirt-1.ac dirt-1.png readme.txt
 
 data-tracks-dirt_PKGFILES	= $(DATA)
 
