--- a/torcs/torcs/data/tracks/road/alpine-1/Makefile
+++ b/torcs/torcs/data/tracks/road/alpine-1/Makefile
@@ -20,11 +20,9 @@ DATADIR   = tracks/road/alpine-1
 
 DATA      = $(shell find * -maxdepth 0 -type f -print)
 
-DATA_PKG      = $(DATA)
+data-tracks-road_PKGFILES	= $(DATA)
 
-data-tracks-road_PKGFILES	= $(DATA_PKG)
-
-data-tracks-road_PKGDIR	= $(DATADIR)
+data-tracks-road_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
