Bot is now stable.

--- a/torcs/torcs/src/drivers/olethros/4/Makefile
+++ b/torcs/torcs/src/drivers/olethros/4/Makefile
@@ -15,7 +15,7 @@
 
 ROBOT       = olethros
 SHIPDIR     = drivers/${ROBOT}/4
-SHIP        = default.xml
+SHIP        = default.xml mclaren-f1.rgb
 SHIPSUBDIRS = 
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
