--- a/torcs/torcs/src/drivers/olethros/0/practice/Makefile
+++ b/torcs/torcs/src/drivers/olethros/0/practice/Makefile
@@ -13,11 +13,11 @@
 #
 ##############################################################################
 
-ROBOT       = bt
+ROBOT       = olethros
 SHIPDIR     = drivers/${ROBOT}/0/practice
 SHIP        = $(shell find *.xml -maxdepth 0 -type f -print)
 
-src-robots-bt_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
-src-robots-bt_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-olethros_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
+src-robots-olethros_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 include ${MAKE_DEFAULT}
 
