Fixed a bug in geometry. Stabilised behaviour a bit, to avoid overconfident driving. It is still not very stable though - performance can increase and then the car starts crashing. Particular problem after a refuelling pitstop. Made some changes in the strategy so that it will not take a pitstop if it is close to an opponent and the race is almost finished. Made changes in the overtake code so that offsets are computed correctly. Added a lot of doxygen comments.

--- a/torcs/torcs/src/drivers/olethros/4/Makefile
+++ b/torcs/torcs/src/drivers/olethros/4/Makefile
@@ -16,7 +16,7 @@
 ROBOT       = olethros
 SHIPDIR     = drivers/${ROBOT}/4
 SHIP        = default.xml mclaren-f1.rgb
-SHIPSUBDIRS = 
+SHIPSUBDIRS = race practice qualifying
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
 src-robots-olethros_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
