--- a/torcs/torcs/src/drivers/olethros/2/Makefile
+++ b/torcs/torcs/src/drivers/olethros/2/Makefile
@@ -16,7 +16,7 @@
 ROBOT       = olethros
 SHIPDIR     = drivers/${ROBOT}/2
 SHIP        = default.xml porsche-gt1.rgb
-SHIPSUBDIRS = 
+SHIPSUBDIRS = race practice qualifying
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
 src-robots-olethros_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
