Fixed a couple of bugs, made car slightly more stable. Fixed the pit strategy code - it should now work very nicely. Now the car can read and write its brain upon race entry/exit.

--- a/torcs/torcs/src/drivers/olethros/Makefile
+++ b/torcs/torcs/src/drivers/olethros/Makefile
@@ -32,3 +32,5 @@ src-robots-olethros_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
 src-robots-olethros_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
+
+#CFLAGSD := $(CFLAGSD) -DUSE_OLETHROS_NAMESPACE
