Bugfixes and reenable compatibility with simuv2 (breaks simuv3 for now...).

--- a/torcs/torcs/src/modules/graphic/ssggraph/Makefile
+++ b/torcs/torcs/src/modules/graphic/ssggraph/Makefile
@@ -28,7 +28,7 @@ LIBS      = -lplibsl -lplibsm -lplibsg -lplibssg -lplibul -lplibssgaux
 
 SHIPDIR   = config
 
-SHIP      = graph.xml
+SHIP      = graph.xml sound.xml
 
 CONFIGCREATEDIRS = ${SHIPDIR}
 
