--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -16,7 +16,8 @@
 ##############################################################################
 
 AC_INIT(Make-config.in)
-AM_INIT_AUTOMAKE(torcs, 1.3.0)
+AC_CONFIG_HEADERS(config.h)
+AM_INIT_AUTOMAKE(torcs, 1.2.3)
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -43,11 +44,11 @@ AC_C_BIGENDIAN
 
 AC_PATH_X
 #CFLAGS="-ansi -Wall -Wstrict-prototypes -W"
-ADDCFLAGS="-Wall"
+ADDCFLAGS="-Wall -fPIC"
 AC_ARG_ENABLE(debug,
 	[  --enable-debug          set the debug mode], 
 	ADDCFLAGS="$ADDCFLAGS -g -DDEBUG -DDEBUG_OUT",
-	ADDCFLAGS="$ADDCFLAGS -O3")
+	ADDCFLAGS="$ADDCFLAGS -O2")
 
 AC_ARG_ENABLE(xrandr,
 	[  --disable-xrandr	   reset the XRANDR mode],	   
@@ -145,7 +146,7 @@ int main() {
 
 ],
   AC_MSG_RESULT(yes),
-  [AC_MSG_RESULT([PLIB 1.8.3 was not detected. TORCS can run only with PLIB 1.6.0, so verify that the PLIB 1.8.3 is really the version installed on your system.])],
+  [AC_MSG_RESULT([PLIB 1.8.3 was not detected. TORCS can run only with PLIB 1.8.3, so verify that the PLIB 1.8.3 is really the version installed on your system.])],
   AC_MSG_RESULT(yes)
 )
 
