--- a/torcs/torcs/data/tracks/e-track-1/Makefile
+++ b/torcs/torcs/data/tracks/e-track-1/Makefile
@@ -2,7 +2,7 @@
 #
 #    file                 : Makefile
 #    created              : Sun Feb 13 17:43:26 CET 2000
-#    copyright            : (C) 2000 by Eric Espie                         
+#    copyright            : (C) 2000-2005 by Eric Espie, Bernhard Wymann                         
 #    email                : torcs@free.fr   
 #    version              : $Id$                                  
 #
@@ -18,7 +18,10 @@
 
 DATADIR   = tracks/road/e-track-1
 
-DATA      = e-track-1.xml background.png e-track-1.ac e-track-1.png readme.txt
+DATA      = e-track-1.xml background.png e-track-1.acc e-track-1.png readme.txt geo-bw1.rgb \
+			shadow2.rgb tr-barrier-bw.rgb tr-curb-bw-l.rgb tr-curb-bw-r.rgb tr-grass-bw1.rgb \
+			tr-grass-bw2.rgb tr-asphalt-bw3-pit-e_n.rgb tr-asphalt-bw3-pit-l_n.rgb \
+			tr-asphalt-bw3-pit_n.rgb tr-asphalt-bw3_n.rgb
 
 
 data-tracks-road_PKGFILES	= $(DATA)
