New barrier and shadow map updated.

--- a/torcs/torcs/data/tracks/eroad/Makefile
+++ b/torcs/torcs/data/tracks/eroad/Makefile
@@ -18,7 +18,10 @@
 
 DATADIR   = tracks/road/eroad
 
-DATA      = eroad.xml background.png eroad.acc eroad.png readme.txt tr-wall-torcs1-left.rgb tr-wall-torcs1-right.rgb tr-asphalt-l2bw1_n.rgb shadow2.rgb
+DATA      = eroad.xml background.png eroad.acc eroad.png readme.txt tr-wall-torcs1-left.rgb \
+			tr-wall-torcs1-right.rgb tr-asphalt-l2bw1_n.rgb shadow2.rgb \
+			tr-asphalt-bw1-pits_n.rgb tr-asphalt-l2bw1-pe_n.rgb tr-asphalt-l2bw1-pl_n.rgb \
+			tr-barrier-bw2.rgb
 
 data-tracks-road_PKGFILES	= $(DATA)
 
