Patches by Rudy Godoy (more screen resolutions, build fixes). Regenerated build files. Changed version to 1.2.4-test1 (altough it is not yet complete).

--- a/torcs/torcs/src/doc/torcsdoc.conf
+++ b/torcs/torcs/src/doc/torcsdoc.conf
@@ -38,7 +38,7 @@ PROJECT_NAME         = torcs
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER       = 1.2.2
+PROJECT_NUMBER       = 1.2.4-test1
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
@@ -123,7 +123,7 @@ FULL_PATH_NAMES      = YES
 # only done if one of the specified strings matches the left-hand part of
 # the path.
 
-STRIP_FROM_PATH      = /home/torcs/sbmain/torcs/torcs/
+STRIP_FROM_PATH      = /usr/src/torcs/torcs/
 
 # The INTERNAL_DOCS tag determines if documentation
 # that is typed after a \internal command is included. If the tag is set 
