--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -17,7 +17,7 @@
 
 AC_INIT(Make-config.in)
 AC_CONFIG_HEADERS(config.h)
-AM_INIT_AUTOMAKE(torcs, 1.2.3)
+AM_INIT_AUTOMAKE(torcs, 1.2.4-test1)
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -59,7 +59,7 @@ AC_ARG_ENABLE(xrandr,
 
 AC_ARG_ENABLE(ccmalloc,
 	[  --enable-ccmalloc       set the ccmalloc mode (beware path...)], 
-	LDFLAGS="$LDFLAGS /home/torcs/ccmalloc-0.3.9-nco/obj/ccmalloc-g++.o -L/home/torcs/ccmalloc-0.3.9-nco/lib -lccmalloc -ldl",
+	LDFLAGS="$LDFLAGS $LDFLAGS ccmalloc-g++.o -lccmalloc -ldl",
 	LDFLAGS="$LDFLAGS")
 
 AC_ARG_ENABLE(profiler,
