--- a/torcs/torcs/data/tracks/g-track-1/Makefile
+++ b/torcs/torcs/data/tracks/g-track-1/Makefile
@@ -2,7 +2,7 @@
 #
 #    file                 : Makefile
 #    created              : Wed Jan 19 19:07:05 CET 2000
-#    copyright            : (C) 1999 by Eric Espie                         
+#    copyright            : (C) 1999-2005 by Eric Espie, Bernhard Wymann
 #    email                : torcs@free.fr   
 #    version              : $Id$                                  
 #
@@ -18,8 +18,16 @@
 
 DATADIR   = tracks/road/g-track-1
 
-DATA      = g-track-1.xml g-track-1.ac background.png  g-track-1.png $(shell find * -maxdepth 0 -type f -name '*.rgb') readme.txt
-
+DATA      = g-track-1.xml g-track-1.acc background.png  g-track-1.png readme.txt \
+			asphalt-bw-g1-1_n.rgb asphalt-bw-g1-patch-1_n.rgb asphalt-bw-g1-patch-2_n.rgb \
+			asphalt-bw-g1-patch-3_n.rgb asphalt-bw-g1-pit_n.rgb asphalt-bw-g1-pitentry-side_n.rgb \
+			asphalt-bw-g1-pitentry_n.rgb asphalt-bw-g1-sidel-end_n.rgb asphalt-bw-g1-sidel-start_n.rgb \
+			asphalt-bw-g1-sidel_n.rgb barr1.rgb earth_and_grass.rgb facade1-512.rgb facade6-512.rgb \
+			facade7.rgb fence-arbor_n.rgb grass-g1.rgb poutre3_arbor_n.rgb poutre4.rgb roof1.rgb \
+			roof3.rgb spectator.rgb std.rgb tarmac-wall-2-g2.rgb tent.rgb torcs0_arbor_n.rgb torcs1.rgb \
+			tr-asphalt-aa-bw1_n.rgb tree53_n.rgb truck_arbor_berniw_n.rgb truck_arbor_bt_n.rgb \
+			truck_arbor_inferno_n.rgb truck_arbor_speedy_n.rgb truck_arbor_tita_n.rgb wall-green-yellow.rgb \
+			wall-grey.rgb wall4.rgb shadow2.rgb
 
 data-tracks-road_PKGFILES	= $(DATA)
 
