- Fixed a bug in collision detection which happend when 2 wrecks where   overlapping. This caused permanent collisions, which in turn avoided to call   dtProceed and therefore avoided the needed update of the data (Bernhard). - Fixed: non ending races because of failing virtual crane, was a floating   point error accumulation problem in simu.cpp (Bernhard). - Barrier has now a field with normal used for barrier collision detection,   reworked SimCarCollideXYScene, collide.cpp (Bernhard). - Added vector classes, such that all berniw/bt derivates can use the same   copy, instead of having a copy in each bot (Bernhard). - Collision code refactoring/cleanup, removed doubled code, etc. (Bernhard). - Initial wall collision support, good enough for now, but needs   improvment and more testing. The damage is currently set very low, such   that the robots have some time to adopt (Bernhard). - Fixed skid sound at low speeds (Christos, Bernhard). - Fixed scroll lists numbering with more than 100 entries (Bernhard). - Enabled configure checking for OpenAL (Bernhard). - Fixed skidmarks when driving in reverse, bug introduced by me when enabling   backface-culling for skids (Christos, Bernhard). - Added trackgen option to just calculate the track parameters (Charalampos). - Increased a "margin" in trackgens track.cpp, will need further inverstigation   (Charalampos).

--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -79,8 +79,7 @@ AC_CHECK_HEADER(X11/Xlib.h,, AC_MSG_ERROR([Can't find X11/Xlib.h. Please check c
 AC_CHECK_HEADER(X11/Xatom.h,, AC_MSG_ERROR([Can't find X11/Xatom.h. Please check config.log and if you can't solve the problem send the file to torcs-users@lists.sourceforge.net with the subject \"torcs compilation problem\"]))
 AC_CHECK_HEADER(X11/keysym.h,, AC_MSG_ERROR([Can't find X11/keysym.h. Please check config.log and if you can't solve the problem send the file to torcs-users@lists.sourceforge.net with the subject \"torcs compilation problem\"]))
 AC_CHECK_HEADER(plib/ssg.h,, AC_MSG_ERROR([Can't find plib/ssg.h. PLIB can be found on http://plib.sourceforge.net/]))
-
-#AC_CHECK_HEADER(AL/al.h,, AC_MSG_ERROR([Can't find AL/al.h. OpenAL can be found on http://www.openal.org/]))
+AC_CHECK_HEADER(AL/al.h,, AC_MSG_ERROR([Can't find AL/al.h. OpenAL can be found on http://www.openal.org/]))
 
 #AC_CHECK_HEADER(X11/Xfuncproto.h,, AC_MSG_ERROR([Can't find X11/Xfuncproto.h. Please check config.log and if you can't solve the problem send the file totorcs-users@lists.sourceforge.net with the subject \"torcs compilation problem\"]))
 #AC_CHECK_HEADER(X11/extensions/randr.h,, AC_MSG_ERROR([Can't find X11/extensions/randr.h. Please check config.log and if you can't solve the problem send the file to torcs-users@lists.sourceforge.net with the subject \"torcs compilation problem\"]))
@@ -107,6 +106,7 @@ AC_CHECK_LIB(Xmu, XmuSimpleErrorHandler,,AC_MSG_ERROR([Can't find libXmu. Please
 AC_CHECK_LIB(Xxf86vm, XF86VidModeSetViewPort,,AC_MSG_ERROR([Can't find libXxf86vm. Please check config.log and if you can't solve the problem send the file to torcs-users@lists.sourceforge.net with the subject \"torcs compilation problem\"]))
 AC_CHECK_LIB(Xrender, XRenderSetSubpixelOrder,,AC_MSG_ERROR([Can't find libXrandr. Please check config.log and if you can't solve the problem send the file to torcs-users@lists.sourceforge.net with the subject \"torcs compilation problem\"]))
 AC_CHECK_LIB(Xrandr, XRRQueryVersion,,AC_MSG_ERROR([Can't find libXrandr. Please check config.log and if you can't solve the problem send the file to torcs-users@lists.sourceforge.net with the subject \"torcs compilation problem\"]))
+AC_CHECK_LIB(openal, alEnable,, AC_MSG_ERROR([Can't find AL/al.h. OpenAL can be found on http://www.openal.org/]))
 
 AC_CHECK_LIB(dl, dlopen)
 AC_CHECK_FUNC(dlopen,,AC_MSG_ERROR([Can't find dlopen function. Please check config.log and if you can't solve the problem send the file to torcs-users@lists.sourceforge.net with the subject \"torcs compilation problem\"]))
