--- a/torcs/torcs/src/libs/Makefile
+++ b/torcs/torcs/src/libs/Makefile
@@ -19,12 +19,12 @@
 SHIPSUBDIRS	= tgf tgfclient raceengineclient learning
 
 EXPINCDIRS	= txml tgf tgfclient client confscreens racescreens robottools raceengineclient learning \
-			  portability
+			  portability math
 
 TOOLSUBDIRS	= txml
 
 SUBDIRS		= confscreens racescreens robottools txml tgf tgfclient client raceengineclient learning \
-			  portability
+			  portability math
 
 PKGSUBDIRS	= $(SUBDIRS)
 
