--- a/torcs/torcs/config.h.in
+++ b/torcs/torcs/config.h.in
@@ -21,6 +21,9 @@
 /* Define to 1 if you have the `m' library (-lm). */
 #undef HAVE_LIBM
 
+/* Define to 1 if you have the `openal' library (-lopenal). */
+#undef HAVE_LIBOPENAL
+
 /* Define to 1 if you have the `plibsg' library (-lplibsg). */
 #undef HAVE_LIBPLIBSG
 
