--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -17,7 +17,7 @@
 
 AC_INIT(Make-config.in)
 AC_CONFIG_HEADERS(config.h)
-AM_INIT_AUTOMAKE(torcs, 1.2.4-test1)
+AM_INIT_AUTOMAKE(torcs, 1.2.4-test2)
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -66,6 +66,14 @@ AC_ARG_ENABLE(profiler,
 	[  --enable-profiler       set the profiler mode],
 	ADDCFLAGS="$ADDCFLAGS -DPROFILER",
 	ADDCFLAGS="$ADDCFLAGS")
+
+AC_ARG_ENABLE(glextprototypes,
+	[  --disable-glextprototypes       disable prototypes in glext.h],
+	if test "$enableval" = "yes";
+	then ADDCFLAGS="$ADDCFLAGS -DGL_GLEXT_PROTOTYPES"
+	fi,
+	ADDCFLAGS="$ADDCFLAGS -DGL_GLEXT_PROTOTYPES")
+
 
 CFLAGS="$CFLAGS $ADDCFLAGS"
 CXXFLAGS="$CXXFLAGS $ADDCFLAGS"
