Windows port. - Removed SmartAssert, considered harmful. - removed make_message, dito. - changed CheckMatchingToken (static modifier, do not use heap). - relocated header files to "learning".

--- a/torcs/torcs/src/libs/learning/Makefile
+++ b/torcs/torcs/src/libs/learning/Makefile
@@ -22,9 +22,9 @@ SOLIBDIR     = .
 
 SOURCES      = policy.cpp ann_policy.cpp List.cpp string_utils.cpp Distribution.cpp MathFunctions.cpp ANN.cpp
 
-EXPORTS      = policy.h ann_policy.h ANN.h learn_debug.h real.h string_utils.h List.h MathFunctions.h Distribution.h SmartAssert.h
+EXPORTS      = policy.h ann_policy.h ANN.h learn_debug.h real.h string_utils.h List.h MathFunctions.h Distribution.h
 
-EXPDIR       = include
+EXPDIR       = include/learning
 
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
