New data structures for logical track representation. New trajectory optimisation code based on a new cost function, and with better gradient descent algorithms. A small tuning in learning.

--- a/torcs/torcs/src/drivers/olethros/Makefile
+++ b/torcs/torcs/src/drivers/olethros/Makefile
@@ -20,7 +20,7 @@
 ROBOT       = olethros
 MODULE      = ${ROBOT}.so
 MODULEDIR   = drivers/${ROBOT}
-SOURCES     = ${ROBOT}.cpp driver.cpp opponent.cpp spline.cpp pit.cpp learn.cpp strategy.cpp cardata.cpp geometry.cpp
+SOURCES     = ${ROBOT}.cpp driver.cpp opponent.cpp spline.cpp pit.cpp learn.cpp strategy.cpp cardata.cpp geometry.cpp Trajectory.cpp TrackData.cpp
 LIBS        = -L${EXPORTBASE}/lib -llearning
 
 SHIPDIR     = drivers/${ROBOT}
