--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -2,8 +2,7 @@
 #
 #    file                 : configure.in
 #    created              : Mon Dec 11 22:34:38 CET 2000
-#    copyright            : (C) 2000 by Eric Espié
-#    email                : Eric.Espie@torcs.org
+#    copyright            : (C) 2000 by Eric Espiï¿½#    email                : Eric.Espie@torcs.org
 #    version              : $Id$
 #
 ##############################################################################
@@ -17,7 +16,7 @@
 
 AC_INIT(Make-config.in)
 AC_CONFIG_HEADERS(config.h)
-AM_INIT_AUTOMAKE(torcs, 1.2.4)
+AM_INIT_AUTOMAKE(torcs, 1.3.0-test1)
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -44,7 +43,7 @@ AC_C_BIGENDIAN
 
 AC_PATH_X
 #CFLAGS="-ansi -Wall -Wstrict-prototypes -W"
-ADDCFLAGS="-Wall -fPIC"
+ADDCFLAGS="-Wall -fPIC -fno-strict-aliasing"
 AC_ARG_ENABLE(debug,
 	[  --enable-debug          set the debug mode],
 	ADDCFLAGS="$ADDCFLAGS -g -DDEBUG -DDEBUG_OUT",
